EWL-9773: Fix nav alignment issue.

--- a/styleguide/source/assets/scss/03-organisms/_locker-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_locker-navigation.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   @include breakpoint($bp-small) {
-    justify-content: end;
+    justify-content: flex-end;
   }
   a {
     position: relative;
